Pin jwt-servlet-auth to 2.0.0 (CORE-951)
Pick up the release version of jwt-servlet-auth with the roles
extraction feature we need.  Make some code changes to adapt to breaking
changes in 2.0.0